--- a/Latex_project_exam.tex
+++ b/Latex_project_exam.tex
@@ -1,5 +1,3 @@
-Latex_project_exam.tex
-
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
@@ -20,7 +18,7 @@ Latex_project_exam.tex
  \date{} 
 \author{\footnotesize{Student: Chiara Salvatori}}
 \institute{
- Esame: Telerilevamento Geo-Ecologico.
+ Exam: Telerilevamento Geo-Ecologico.
  
     Professore: Duccio Rocchini
     \\
@@ -194,7 +192,7 @@ The three parameter to evaluate the lake water quality are: the \textcolor{brown
 
 % Slide 20
 \begin{frame}{An experiment!}
-I was not really satisfied of the results, so I tried to analize data with 300m resolution (2017 and 2020) on qGis:\\
+I was not really satisfied of the results, so I tried to analize data with 300m resolution (2017 and 2020) on QGIS:\\
 \bigskip
 \includegraphics[width=0.5\textwidth]{lwq_qgis_2017.png}\includegraphics[width=0.5\textwidth]{lwq_qgis_2020.png}
 \end{frame}
@@ -202,6 +200,15 @@ I was not really satisfied of the results, so I tried to analize data with 300m 
 \begin{frame}%{An experiment!}
 
 \includegraphics[width=0.5\textwidth]{lwq_qgis_2020.png}\includegraphics[width=0.5\textwidth]{nci_2020_end.jpeg}
+\end{frame}
+
+\begin{frame}
+\itshape{\Large{Thank you for your attention!}}
+\smallskip
+\centering
+\includegraphics[width=1\textwidth]{thank_you.jpg}\\
+\smallskip
+\footnotesize{Chiara S.}
 \end{frame}
 
 \end{document}
